src/css/alice.scss
/* ... */
div#input div.editor_toolbar button.selected {
  color: $textentry_button_active_color;
}

.bold {font-weight: bold;}
.italic {font-style: italic;}
.underline {text-decoration: underline;}


div.editor div,
div.editor p,
div.editor h1,
div.editor h2,
div.editor h3,
div.editor h4,
div.editor h5,
div.editor span
{
  font-size: 1em !important;
  margin: 0 !important;
  padding: 0 !important;
}

div.editor img {
  display: none !important;
}

div#input input.send {
  display: none;
}

ul#tabs {
  list-style: none;
  margin: 0;
  padding: 0;
  padding-left: 1px;
  font-size: 11px;
  position: absolute;
  left: 0px;
  height: 24px;
  overflow: hidden;
  width: 5000px;
  -webkit-transition: left 0.25s ease-in-out;
  -moz-transition: left 0.25s ease-in-out;
}

div#tab_bar {
  bottom: 0px;
  left: 0px;
  right: 0px;
  height: 24px;
  position: absolute;
  background: url(image/sprites.png) 0px -300px repeat-x $tab_background;
}

div#tabs_container {
  position: absolute;
  top: 0px;
  bottom: 0px;
  right: 36px;
  left: 48px;
  overflow: hidden;
}

ul#tabs li {
  float: left;
  margin: 0;
  margin-left: -1px;
  color: $tab_text;
  background: url(image/sprites.png) 0px -300px repeat-x $tab_background;
}

ul#tabs li.hidden {
  display: none;
}
ul#tabs li.visible {
  display: block;
}

ul#tabs li div.hit_area {
  border: 1px solid $tab_border;
  border-bottom: none;
  border-top: none;
  float:left;
  height: 14px;
  padding: 3px 10px 8px 4px;
}

ul#tabs li.active div.hit_area {
  border: 1px solid $tab_border_active;
  border-top: none;
  background: $tab_background_active;
  height: 11px;
  padding-top: 4px;
  margin-top: -1px;
  -webkit-box-shadow: 2px 2px 2px rgba(0,0,0,0.1);
}

ul#tabs li:not(.active) {
  z-index: 900 !important;
}

ul#tabs li.active {
  height: 24px;
  z-index: 903;
  background: $tab_background;
}

ul#tabs li.active:hover div.hit_area {
  background: $tab_background_active;
}

ul#tabs li:hover div.hit_area {
  background: $tab_background_hover;
  background: url(image/sprites.png) 0px -300px repeat-x $tab_background_hover;
}

div#topic {
  position: absolute;
  top: 0px;
  left: 0px;
  right: 0px;
  background: $topic_background;
  text-align: center;
  border-top: $topic_border_top;
  border-bottom: $topic_border_bottom;
  padding: 1px 0;
  padding-left: 50px;
  font-size: 11px;
  height: 15px;
  min-height: 15px;
  overflow: hidden;
  z-index: 901;
  text-decoration: none;
  color: $topic_text;
  -webkit-box-shadow: 2px 0 2px rgba(0,0,0,0.2);
}

ul.messages {
  list-style: none;
  margin: 0;
  padding: 3px 0;
  margin: 0;
}

ul.messages > li {
  font-size: 13px;
  display: block;
  position: relative;
  background-color: $message_nick_column_background;
}

ul.messages > li:not(.consecutive) {
  clear: both;
}

ul.messages li.highlight div.msg {
  border-right: 3px solid $message_highlight;
}

.info ul.messages li.highlight,
ul.messages li.self {
  background: $message_self_nick_column_background;
  border-right: none;
}

.info ul.messages li.highlight div.msg,
ul.messages li.self div.msg {
  background: $message_self_background;
}

ul.messages li div.msg {
  background: $message_background;
}

ul.messages li.consecutive div.left {
  opacity: 0px;
  height: 0px;
  position: absolute;
  left: -1000px;
}

div.left {
  float: left;
  width: 95px;
  overflow: hidden;
  font-weight: bold;
  text-align: right;
  padding: 4px 0;
  padding-right: 4px;
  padding-bottom: 0;
  text-overflow: ellipsis;
  position: relative;
  text-wrap: none;
  white-space: nowrap;
  -khtml-nbsp-mode: space;
}

li.event a,
li.event {
  color: $event_text;
}

li.event div.left {
  padding-top: 5px;
}

li.event div.msg {
  border-top: none;
}

ul.messages li.avatar div.left {
  padding-bottom: 3px;
  padding-top: 3px;
}

li.event div.left {
  padding: 5px 0;
  width: 95px;
}

li.event div.left span.timestamp {
  opacity: 0;
  //-webkit-transition: opacity 0.1s ease-in-out;
  //-moz-transition: opacity 0.1s ease-in-out;
}

ul.messages li.avatar:not(.consecutive) {
  z-index: 800;
}

div.left img {
  max-width: 32px;
  max-height: 32px;
  float: right;
  display: block;
}

ul.messages li.avatar span.nick {
  position: absolute;
  z-index: 801;
  right: 4px;
  top: 3px;
  padding: 0 2px;
  min-width: 28px;
  background: rgba(0, 0, 0, 0.5);
  color: #fff;
  text-shadow: rgba( 0, 0, 0, 1 ) 0 1px 1px;
  //-webkit-transition: opacity 0.1s ease-in-out;
  //-moz-transition: opacity 0.1s ease-in-out;
  opacity: 0;
}

div.timehint {
  font-size: 10px;
  position: absolute;
  right: 5px;
  top: 6px;
  color: $timehint_color;
  opacity: 0;
  //-webkit-transition: opacity 0.1s ease-in-out;
}

li.consecutive div.timehint {
  top: auto;
  bottom: 3px;
}

div.msg {
  margin-left: 100px;
  min-height: 1.2em;
  padding: 3px 5px;
  padding-right: 45px;
  word-wrap: break-word;
  -khtml-line-break: after-white-space;
  -khtml-nbsp-mode: space;
  border-top: 1px solid $message_border;
  border-left: 1px solid $nick_column_border;
}

div.msg div.oembed {
  font-size: 12px;
  padding: 5px;
  word-break: default;
  white-space: normal;
  display: none;
}

sup.external {
  line-height: 0px;
  font-size: 0.8em;
}

sup.external a {
  text-decoration: none;
}

sup.external a:hover {
  text-decoration: underline;
}

div.oembed iframe {
  min-height: 250px;
  font-size: 0.8em;
  border: none;
  margin: 0;
  padding: 0;
}

div.msg span {
  white-space: pre-wrap;
}

li.fold + li div.msg {
  border-top: 1px solid $message_border_fold !important;
}

li.event div.msg {
  padding: 5px;
}

li.monospaced div.msg {
  padding: 7px 5px;
}

li.event + li.message div.msg {
  border-top: 1px solid transparent;
}

ul.messages li:first-child div.msg {
  border-top: 1px solid transparent;
}

/* so the last avatar doesn't hang off the edge */
ul.messages li.avatar:not(.consecutive) div.msg {
  min-height: 35px;
}
ul.messages li.monospaced.avatar:not(.consecutive) div.msg {
  min-height: 24px;
}
/* ... */

